add some notebook for module 6 till 10

--- a/modul5/latihan_modul5.ipynb
+++ b/modul5/latihan_modul5.ipynb
@@ -141,7 +141,12 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "cc766731-3c44-4c7b-ab94-de524a80ef24",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -242,6 +247,13 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.11.8"
+  },
+  "widgets": {
+   "application/vnd.jupyter.widget-state+json": {
+    "state": {},
+    "version_major": 2,
+    "version_minor": 0
+   }
   }
  },
  "nbformat": 4,
